force-app/main/default/objects/Case_Team_Assignment__c/Case_Team_Assignment__c.object-meta.xml
<CustomObject>
    <description>The Case Team Assignment object records Salesforce User access roles on a Case as a child of Case. It captures Case, Assigned User (required), and Role (Editor or Viewer only). Commonly used for Case collaboration management and guided team administration.</description>
    <label>Case Team Assignment</label>
    <nameField>
        <displayFormat>CTA-{00000}</displayFormat>
        <label>Assignment Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Team Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>