force-app/main/default/objects/Case_Team_Assignment__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <label>Assigned User</label>
    <description>The active Salesforce User assigned to the Case.</description>
    <inlineHelpText>Select an active Salesforce User to add to the Case team.</inlineHelpText>
    <deleteConstraint>SetNull</deleteConstraint>
    <lookupFilter>
        <active>true</active>
        <description>Only active Salesforce Users may be assigned.</description>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AssignedUser</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>