force-app/main/default/objects/Case_Team_Assignment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <description>The Case that owns this team assignment.</description>
    <inlineHelpText>Select the Case for this assignment. An assignment cannot exist without a Case.</inlineHelpText>
    <relationshipLabel>Case Team Assignments</relationshipLabel>
    <relationshipName>CaseTeamAssignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <referenceTo>Case</referenceTo>
</CustomField>