force-app/main/default/objects/Case_Team_Assignment__c/fields/Case_User_Key__c.field-meta.xml
<CustomField>
    <fullName>Case_User_Key__c</fullName>
    <label>Case User Key</label>
    <description>Internal composite key made from the Case ID and Assigned User ID to prevent duplicate assignments.</description>
    <inlineHelpText>Internal key populated from the Case and Assigned User IDs. Do not edit manually.</inlineHelpText>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>