force-app/main/default/objects/Case_Team_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <description>The access role granted to the assigned User for the Case.</description>
    <inlineHelpText>Choose Editor or Viewer. The stored values are EDITOR and VIEWER.</inlineHelpText>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDITOR</fullName>
                <label>Editor</label>
            </value>
            <value>
                <fullName>VIEWER</fullName>
                <label>Viewer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>