force-app/main/default/objects/Case_Team_Assignment__c/validationRules/Assigned_User_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_User_Required</fullName>
    <active>true</active>
    <description>Requires every Case Team Assignment to identify an assigned Salesforce User.</description>
    <errorConditionFormula>ISBLANK(Assigned_User__c)</errorConditionFormula>
    <errorDisplayField>Assigned_User__c</errorDisplayField>
    <errorMessage>Choose an active Salesforce User for this Case Team Assignment.</errorMessage>
</ValidationRule>