force-app/main/default/objects/Case_Team_Assignment__c/validationRules/Case_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Required</fullName>
    <active>true</active>
    <description>Requires every Case Team Assignment to remain associated with a Case while allowing the lookup field to be omitted from the record-entry layout.</description>
    <errorConditionFormula>ISBLANK(Case__c)</errorConditionFormula>
    <errorMessage>A Case Team Assignment must be associated with a Case.</errorMessage>
</ValidationRule>